Fix library sheet dark mode

--- a/src/components/panels/classic-sheet/element-sheet/element-sheet.scss
+++ b/src/components/panels/classic-sheet/element-sheet/element-sheet.scss
@@ -47,3 +47,9 @@
 		max-height: 1240px;
 	}
 }
+
+html[data-theme="dark"] {
+	.element-sheet {
+		background-color: rgb(0, 0, 0);
+	}
+}
